tests/baselines/reference/assignFromStringInterface.errors.txt
==== tests/cases/compiler/assignFromStringInterface.ts (1 errors) ====
    var x = '';
    var a: String;
    x = a;
    ~
!!! assignFromStringInterface.ts(3,1): error TS2011: Cannot convert 'String' to 'string'.
    a = x;